<resources>

    <string name="app_name">CakeUI</string>
    
    
    <!-- Dialog -->
    
    <string name="dialog_confirmation">Confirmação</string>
    <string name="dialog_information">Informação</string>
    
    <string name="button_dialog_ok">OK</string>
    <string name="button_dialog_cancel">Cancelar</string>
    
    <string name="message_dialog_confirmation">Você tem certeza dessa operação?</string>
    <string name="message_dialog_error">Erro ao concluir a operação.</string>
    <string name="message_dialog_success">Operação concluída com sucesso!</string>
	<string name="message_dialog_information">Operação em andamento. Aguarde&#8230;</string>
	
	<!-- Async Task -->
	
	<string name="async_task_logging_online">Accesando a aplicação localmente&#8230;</string>
	<string name="async_task_logging_offline">Acessando a aplicação remotamente&#8230;</string>
	<string name="async_task_checking_updates">Verificando atualizações&#8230;</string>
    
    <!-- Broadcast messages -->
    
    <string name="broadcast_network_down">Aplicação sem acesso ao servidor.</string>
    <string name="broadcast_network_up">Aplicação com acesso ao servidor.</string>
	
</resources>
