<?xml version="1.0" encoding="utf-8"?>

<!-- Author: Mariana Azevedo -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/textView_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
		android:layout_gravity="center_vertical|center_horizontal"
		android:textSize="20sp" 
		android:text="@string/message_dialog_confirmation"
		android:textColor="@color/abs__background_holo_light" />
    
     <LinearLayout android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:id="@+id/layout_buttons">
    
		<Button android:id="@+id/button_confirmation"
		    android:contentDescription="@string/message_dialog_confirmation"
		    android:text="@string/button_dialog_ok"
		    android:layout_width="0dp"
			android:layout_height="60dp"
			android:layout_weight=".50"
			android:layout_gravity="left"/>
	    
	    <Button android:id="@+id/button_cancel"
	        android:contentDescription="@string/message_dialog_confirmation"
		    android:text="@string/button_dialog_cancel"
			android:layout_width="0dp"
			android:layout_height="60dp"
			android:layout_weight=".50"
			android:layout_gravity="right"/>
	 
	 </LinearLayout>
        

</LinearLayout>
